History:

<see Git checking messages for history>

dev     2017/xx/xx
      - ci: build the documentation
      - doc: improvements and fixes (fix #37)

3.1.1   2017/11/27
      - MSS: add the 'mss' entry point

3.1.0   2017/11/16
      - new contributor: Karan Lyons
      - add the 'Say Thanks' button
      - doc: several fixes (fix #22)
      - tests: a lot of tests added for better coverage
      - MSS: add more way of customization to the output argument of save()
      - MSS: possibility to use custom class to handle screen shot data
      - Mac: properly support all display scaling and resolutions (fix #14, #19, #21, #23)
      - Mac: fix memory leaks (fix #24)
      - Linux: handle bad display value
      - Windows: Take into account zoom factor for high-DPI displays (fix #20)

3.0.1   2017/07/06
      - fix examples links

3.0.0   2017/07/06
      - big refactor, introducing the ScreenShot class
      - add Numpy array interface support
      - examples: add OpenCV/Numpy, PIL pixels, FPS

2.0.22  2017/04/29
      - new contributors: David Becker, redodo
      - add an example to capture only a part of the screen
      - better use of exception mechanism
      - Linux: use of hasattr to prevent Exception on early exit
      - Mac: take into account extra black pixels added when screen with is not divisible by 16 (fix #14)

2.0.18  2016/12/03
      - change license to MIT
      - new contributor: Jochen 'cycomanic' Schroeder
      - add type hints
      - add documentation (fix #10)
      - add tests and use Travis CI (fix #9)
      - remove unused code (reported by Vulture)
      - Linux: remove MSS library
      - Linux: insanely fast using only ctypes
      - Linux: skip unused monitors
      - Linux: use errcheck instead of deprecated restype with callable (fix #11)
      - Linux: fix security issue (reported by Bandit)

2.0.0   2016/06/04
      - split the module into several files
      - add issue and pull request templates