@@ -51,7 +51,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = 'Python MSS'
-copyright = '2013-2017, Tiger-222'
+copyright = "Mickael 'Tiger-222' Schoentgen"
 author = 'Tiger-222'
 
 # The version info for the project you're documenting, acts as replacement for
@@ -155,7 +155,7 @@ html_theme = 'default'
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-html_static_path = ['_static']
+# html_static_path = ['_static']
 
 # Add any extra paths that contain custom files (such as robots.txt or
 # .htaccess) here, relative to this directory. These files are copied
