@@ -39,5 +39,6 @@ Abandoned
 
 - Support for Python 2.6 was dropped on 2016-10-08: too old and introduced optimizations broke it.
 - Support for Python 3.0, 3.1, and 3.2 was dropped on 2016-10-08: there is no more tests facilities.
+- Support for Python 3.3 was dropped on 2017-12-05: there is no more tests facilities for the documentation.
 
 By the way, if you find the *force*, give it a try and tell us if you managed to make one of these versions working (a patch should be quite easy).
